data/derived/comb/progs/unify/prog5352.ml.out
Characters 69-85:
  let prod = mulByDigit (x l) + o in
             ^^^^^^^^^^^^^^^^
Error: This expression has type int list -> int list
       but an expression was expected of type int
